# longtail-analyzer

./: .env.example  .gitignore  README.md  activate.sh  cursor-prompt.md  env.example  example_usage.py  main.py  prd.md  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_simple.py
.cursor/rules/: aa-branch-mgmt.mdc  aa-config-mgmt.mdc  aa-docs.mdc  aa-github-pr.mdc  aa-optimize.mdc  aa-snyk.mdc  mcp-deployment.mdc  mcp-development.mdc  mcp-documentation.mdc  mcp-error-handling.mdc  mcp-performance.mdc  mcp-protocol-core.mdc  mcp-security.mdc  mcp-stdio-transport.mdc  mcp-testing.mdc  mcp-user-consent.mdc  py-docs-rule.mdc
configs/: default.yaml
docs/: analysis-summary.md  api-docs-summary.md  api-reference.md  import-fix-summary.md  import-structure.md  next-steps-readme.md  uv-setup-guide.md  uv-setup-status.md
docs/api/: search.js  src.html
docs/api-markdown/: search.js  src.html
docs/api-markdown/src/: agents.html  llm.html  models.html  orchestrator.html  utils.html
docs/api/src/: agents.html  llm.html  memory.html  models.html  orchestrator.html  utils.html
src/: __init__.py  __main__.py  orchestrator.py
src/agents/: __init__.py  data_processor.py  data_processor.py.orig  enrichment_agent.py  pattern_analyzer.py  profile_manager.py
src/llm/: __init__.py  api_llm.py  local_llm.py
src/memory/: __init__.py  cache_manager.py  state_store.py  vector_store.py
src/models/: __init__.py  pattern.py  profile.py
src/utils/: __init__.py  config.py  mcp_client.py
tests/: __init__.py  test-script.py
